Fixed second price class -changed code at second-price class to make code clean, positioned vertically prices by flex, align-items, justify-content and gap instead of position absolute

--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -87,17 +87,18 @@ a {
 }
 
 .price-box {
-    flex-direction: row;
     font-size: 2rem;
     font-weight: 700;
     font-family: 'fraunces';
-    position: relative;
     margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
 }
 
 .first-price {
     color: hsl(158, 36%, 37%);
-    margin-right: 1.5rem;
 }
 
 .second-price {
@@ -105,8 +106,7 @@ a {
     font-weight: 500;
     font-family: 'montserrat';
     color: hsl(228, 12%, 48%);
-    position: absolute;
-    padding: 0.5rem 0;
+    
 }
 
 
